# rules_motoko

./: CHANGELOG.md  CODEOWNERS  README.md  WORKSPACE.bazel
.github/workflows/: ci.yml
examples/: WORKSPACE.bazel
examples/actors/: BUILD.bazel  Pub.mo  Sub.mo
examples/external_actors/: BUILD.bazel  ledger.did  main.mo
examples/tests/: BUILD.bazel  Test.mo
motoko/: BUILD.bazel  defs.bzl  repositories.bzl  versions.bzl
